--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -64,4 +64,12 @@
     <string name="resumen_pedido">Order Summary</string>
     <string name="formulario_pago">Payment Form</string>
     <string name="resumen_pago">Payment Summary</string>
+    <string name="pantalla_inicio">Pantalla de inicio</string>
+    <string name="pantalla_HacerPedido">Hacer Pedido</string>
+    <string name="pantalla_ResumenPedido">Resumen Pedido</string>
+    <string name="pantalla_FormularioPago">Formulario Pago</string>
+    <string name="pantalla_ResumenPago">Resumen Pago</string>
+    <string name="siguiente">Siguiente</string>
+    <string name="atras">Atras</string>
+    <string name="inicio">Inicio</string>
 </resources>
