--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Pizzeria</string>
+    <string name="app_name" translatable="false">Pizzeria PIZZA TIME!!!</string>
     <string name="nombre">Lucía García</string>
     <string name="correo">ejemplo@algo.com</string>
     <string name="tfno">654 215 236</string>
@@ -67,5 +67,13 @@
     <string name="resumen_pedido">Resumen Pedido</string>
     <string name="formulario_pago">Formulario pago</string>
     <string name="resumen_pago">Resumen Pago</string>
+    <string name="pantalla_inicio">Pantalla de inicio</string>
+    <string name="pantalla_HacerPedido">Haz Tu Pedido!!!</string>
+    <string name="pantalla_ResumenPedido">Resumen Pedido</string>
+    <string name="pantalla_FormularioPago">Formulario Pago</string>
+    <string name="pantalla_ResumenPago">Resumen Pago</string>
+    <string name="siguiente">Siguiente</string>
+    <string name="atras">Atras</string>
+    <string name="inicio">Inicio</string>
 
 </resources>
