--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -64,14 +64,10 @@
     <string name="resumen_pedido">Order Summary</string>
     <string name="formulario_pago">Payment Form</string>
     <string name="resumen_pago">Payment Summary</string>
-    <string name="pantalla_inicio">Pantalla de inicio</string>
-    <string name="pantalla_HacerPedido">Hacer Pedido</string>
-    <string name="pantalla_ResumenPedido">Resumen Pedido</string>
-    <string name="pantalla_FormularioPago">Formulario Pago</string>
-    <string name="pantalla_ResumenPago">Resumen Pago</string>
     <string name="siguiente">Next</string>
     <string name="atras">Back</string>
     <string name="inicio">Start</string>
     <string name="Haz_pedido">Make Your Order!!!</string>
     <string name="Resumen_pedido">Order Summary</string>
+    <string name="pagar">Pay</string>
 </resources>
