--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="inicio">Inicio</string>
     <string name="Haz_pedido">Haz Tu Pedido!!!</string>
     <string name="Resumen_pedido">Resumen Del Pedido</string>
+    <string name="pagar">Pagar</string>
 </resources>
