--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -25,6 +25,7 @@
     <string name="txt_precio_total">Total Price</string>
     <string name="label_seleccionar_tamano">Choose Size</string>
     <string name="label_cantidad_bebidas">Drink quantity</string>
+    <string name="bebida">Drink</string>
     <string name="tipo_tarj">Card Kind</string>
     <string name="tarjeta_elegida">Choosen Card:</string>
     <string name="cant_pagar">Total Account</string>
@@ -70,5 +71,7 @@
     <string name="inicio">Start</string>
     <string name="Haz_pedido">Make Your Order!!!</string>
     <string name="Resumen_pedido">Order Summary</string>
+    <string name="resumen_de_pedidos">Orders Summary</string>
     <string name="pagar">Pay</string>
+    <string name="pedido">Order #%1$d: %2$s</string>
    </resources>
