--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="nombre">Lucía García</string>
     <string name="correo">ejemplo@algo.com</string>
     <string name="tfno">654 215 236</string>
     <string name="pizza1">Roman</string>
@@ -18,8 +17,6 @@
     <string name="opcion_pollo">Chicken</string>
     <string name="opcion_cerdo">Pork</string>
     <string name="opcion_ternera">Beef</string>
-    <string name="titulo_realizar_pedido">Place Order</string>
-    <string name="btn_cambiar">Change</string>
     <string name="txt_seleccionar_pizza">Select your pizza</string>
     <string name="txt_seleccionar_bebida">Select your drink</string>
     <string name="txt_precio_total">Total Price</string>
@@ -27,51 +24,29 @@
     <string name="label_cantidad_bebidas">Drink quantity</string>
     <string name="bebida">Drink: </string>
     <string name="tipo_tarj">Card Kind</string>
-    <string name="tarjeta_elegida">Choosen Card:</string>
-    <string name="cant_pagar">Total Account</string>
     <string name="label_nombre">NAME:</string>
     <string name="label_correo">EMAIL:</string>
     <string name="label_tfno">PHONE:</string>
     <string name="btn_cancelar">Cancel</string>
     <string name="btn_aceptar">Accept</string>
     <string name="btn_enviar">Send</string>
-    <string name="btn_ir_pago">Payment Form</string>
     <string name="resumen_title">Order Summary</string>
-    <string name="label_pizza">Pizza:</string>
     <string name="label_tamano">Size:</string>
     <string name="label_cantidad">Pizza quantity:</string>
     <string name="label_opcion">Option:</string>
-    <string name="label_total">TOTAL:</string>
     <string name="pago_form_title">Payment Form</string>
-    <string name="label_seleccionar_tarjeta">Select card type:</string>
-    <string name="label_num_tarjeta">Card Number</string>
-    <string name="label_fecha_cad">Expiry Date (MM/YY)</string>
-    <string name="label_cvc">CVC</string>
-    <string name="pago_resumen_title">Payment Summary</string>
-    <string name="pago_exito_msg">Payment Processed Successfully!</string>
-    <string name="label_cliente">Customer</string>
-    <string name="label_metodo">Method</string>
-    <string name="label_tarjeta_cuenta">Card/Account</string>
-    <string name="label_total_pagado">TOTAL PAID:</string>
-    <string name="email_asunto_justificante">"Payment receipt "</string>
-    <string name="mensaje_pago_realizado">Payment successful</string>
     <string name="tamano_pequena">Small</string>
     <string name="tamano_mediana">Medium</string>
     <string name="tamano_grande">Large</string>
     <string name="hacer_pedido">Make order</string>
     <string name="ver_pedidos">See orders</string>
-    <string name="btn_cerrar">Close</string>
-    <string name="btn_resumen_pedido">Order Summary</string>
     <string name="resumen_pedido">Order Summary</string>
     <string name="formulario_pago">Payment Form</string>
     <string name="resumen_pago">Payment Summary</string>
-    <string name="siguiente">Next</string>
     <string name="atras">Back</string>
-    <string name="inicio">Start</string>
     <string name="Haz_pedido">Make Your Order!!!</string>
-    <string name="Resumen_pedido">Order Summary</string>
     <string name="resumen_de_pedidos">Orders Summary</string>
-    <string name="pagar">Pay</string>
     <string name="pedido">Order #%1$d: %2$s</string>
     <string name="cantidad_resumen">Quantity: </string>
+    <string name="opciones_para">Options for</string>
    </resources>
