--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name" translatable="false">Pizzeria PIZZA TIME!!!</string>
-    <string name="nombre">Lucía García</string>
     <string name="correo">ejemplo@algo.com</string>
     <string name="tfno">654 215 236</string>
     <string name="pizza1">Romana</string>
@@ -18,8 +17,6 @@
     <string name="opcion_pollo">Pollo</string>
     <string name="opcion_cerdo">Cerdo</string>
     <string name="opcion_ternera">Ternera</string>
-    <string name="titulo_realizar_pedido">Realizar Pedido</string>
-    <string name="btn_cambiar">Cambiar</string>
     <string name="txt_seleccionar_pizza">Selecciona tu pizza:</string>
     <string name="txt_seleccionar_bebida">Selecciona tu bebida:</string>
     <string name="txt_precio_total">Precio total</string>
@@ -29,52 +26,27 @@
     <string name="btn_cancelar">Cancelar</string>
     <string name="btn_aceptar">Aceptar</string>
     <string name="btn_enviar">Enviar</string>
-    <string name="btn_ir_pago">Formulario de pago</string>
     <string name="resumen_title">Resumen del Pedido</string>
-    <string name="label_pizza">Pizza:</string>
-    <string name="label_tamano">Tamaño:</string>
+    <string name="label_tamano">Tamaño</string>
     <string name="label_cantidad">Cantidad de pizzas:</string>
     <string name="label_opcion">Opción:</string>
-    <string name="label_total">TOTAL:</string>
     <string name="pago_form_title">Formulario de Pago</string>
-    <string name="label_seleccionar_tarjeta">Selecciona el tipo de tarjeta:</string>
-    <string name="label_num_tarjeta">Número de Tarjeta</string>
-    <string name="label_fecha_cad">Fecha Caducidad (MM/AA)</string>
-    <string name="label_cvc">CVC</string>
-    <string name="cant_pagar">Cantidad a Pagar</string>
     <string name="tipo_tarj">Tipo de Tarjeta</string>
-    <string name="tarjeta_visa" translatable="false">VISA</string>
-    <string name="tarjeta_mastercard" translatable="false">MasterCard</string>
-    <string name="tarjeta_euro6000" translatable="false">Euro 6000</string>
-    <string name="pago_resumen_title">Resumen del Pago</string>
-    <string name="tarjeta_elegida">Tarjeta Elegida:</string>
-    <string name="pago_exito_msg">¡Pago Procesado con Éxito!</string>
-    <string name="label_cliente">Cliente</string>
-    <string name="label_metodo">Método</string>
-    <string name="label_tarjeta_cuenta">Tarjeta/Cuenta</string>
-    <string name="label_total_pagado">TOTAL PAGADO:</string>
-    <string name="email_asunto_justificante">Justificante de pago</string>
-    <string name="mensaje_pago_realizado">Pago realizado</string>
-    <string name="label_cantidad_bebidas">Cantidad de bebidas:</string>
+    <string name="label_cantidad_bebidas">Cantidad de bebidas</string>
     <string name="label_seleccionar_tamano">Elige Tamaño</string>
     <string name="tamano_pequena">Pequeña</string>
     <string name="tamano_mediana">Mediana</string>
     <string name="tamano_grande">Grande</string>
     <string name="hacer_pedido">Hacer Pedido</string>
     <string name="ver_pedidos">Ver Pedidos</string>
-    <string name="btn_cerrar">Cerrar</string>
-    <string name="btn_resumen_pedido">Resumen Pedido</string>
     <string name="resumen_pedido">Resumen Pedido</string>
     <string name="formulario_pago">Formulario pago</string>
     <string name="resumen_pago">Resumen Pago</string>
-    <string name="siguiente">Siguiente</string>
     <string name="atras">Atras</string>
-    <string name="inicio">Inicio</string>
     <string name="Haz_pedido">Haz Tu Pedido!!!</string>
-    <string name="Resumen_pedido">Resumen Del Pedido</string>
-    <string name="pagar">Pagar</string>
     <string name="resumen_de_pedidos">Resumen de Pedidos</string>
     <string name="pedido">Pedido #%1$d: %2$s</string>
     <string name="bebida">Bebida: </string>
     <string name ="cantidad_resumen">Cantidad: </string>
+    <string name="opciones_para">Opciones para</string>
 </resources>
